--- a/app/views/event/_attendees.html.erb
+++ b/app/views/event/_attendees.html.erb
@@ -1,24 +1,27 @@
 <h3>Attendees</h3>
-<% if @event.attendees.blank? %>
-  There are currently no attendees for this event.
-<% else %>
-  Only show attendees sharing:<br />
-  <% form_tag filter_attendees_path(@event.id), :remote => true do %>
+<div class="attendees">
+  <% unless @event.attendees.blank? %>
+  <div class="filter-data">
+    <% form_tag filter_attendees_path(@event.id), :remote => true do %>
+    <span class="desc">Sharing Preferences:</span>
     <% Sharable.all.each do |sharable| %>
       <%= check_box_tag(sharable.slug, '', false, :class => 'submittable') %>
       <%= label_tag(sharable.slug, sharable.name) %>
     <% end %>
-  <br />
-
+    &nbsp;&nbsp;&nbsp;
     <% cities = [""] + @event.attendees.collect{|attendee| attendee.city + ", " + attendee.region unless attendee.city.blank? || attendee.region.blank?}.flatten.uniq %>
     <% unless cities.count <= 2 %>
-  Only show attendees traveling from:<br />
-
-    <%=  select_tag("city", options_for_select(cities), :class => 'submittable') %>
-    <% end %>
-   <% end %>
-  <br />
-  <div id="filtered_attendees">
-    <%= render :partial => 'filtered_attendees' %>
+      <span class="desc">Location:</span> <%=  select_tag("city", options_for_select(cities), :class => 'submittable') %>
+      <% end %>
+     <% end %>
   </div>
-<% end %>
+  <% end %>
+  
+  <% if @event.attendees.blank? %>
+    <p><strong>There are currently no attendees for this event.</strong></p>
+  <% else %>
+    <div id="filtered_attendees">
+      <%= render :partial => 'filtered_attendees' %>
+    </div>
+  <% end %>
+</div>
