--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -5,7 +5,7 @@
 
 <% users_groups = Membership.find_all_by_user_id(@user.id, :include => :group).collect{|membership| membership.group} %>
 
-<% users_events = users_groups.collect{|group| group.event}.uniq.sort_by{|event| event.starts_at} %>
+<% users_events = users_groups.reject{|g| g.event.nil?}.collect{|group| group.event}.uniq.sort_by{|event| event.starts_at} %>
 
 <% my_groups =  Membership.find_all_by_user_id(current_user.id, :include => :group).collect{|membership| membership.group} rescue [] %>
 <%  common_groups = users_groups & my_groups
