Fixed comment replies

--- a/app/views/shared/_comment.erb
+++ b/app/views/shared/_comment.erb
@@ -23,6 +23,8 @@
         <%= link_to 'reply', comment_reply_url(:comment_id => comment.id), :remote=> true, :class=>'reply_link' %>
       </div>
     </div>
+    <div id="reply_to_<%= comment.id %>">
+    </div>
     <% unless comment.children.empty? %>
     <div class="comment-replies">
         <% comment.children.each do |child| %>
