--- a/app/views/event/event_page.erb
+++ b/app/views/event/event_page.erb
@@ -19,7 +19,7 @@
 
 <span style="font-size: small">
   <% if !current_user.nil? && @event.administrator == current_user %>
-   - <%= link_to 'Edit', event_update_path(@event.id) %>
+  <%= link_to 'Edit', event_update_path(@event.id) %>
   <% end %></span>
 <% unless @event.attendees.include?(current_user) %>
   <%= link_to 'Attend', attend_event_path %>
